--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "author": "Ray Andrew <raydreww@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node --max-old-space-size=4096 src/index.js"
   },
   "dependencies": {
+    "@google-cloud/translate": "^2.1.2",
     "JSONStream": "^1.3.5",
     "bluebird": "^3.5.2",
     "chalk": "^2.4.1",
